--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
+		<link rel="stylesheet" type="text/css" href="style.css">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 	</head>
 	<body>
@@ -15,6 +16,9 @@
 					<section>
 						<div class="alert alert-primary mt-5" role="alert">
 						  	First commit - master branch!
+						</div>
+						<div class="alert alert-secondary mt-3" role="alert">
+						  	<p class="secondary">Second commit - master branch!</p>
 						</div>
 					</section>
 				</div>
