--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 						<div class="alert alert-secondary mt-3" role="alert">
 						  	<p class="secondary">Second commit - master branch!</p>
 						</div>
+						<div class="alert alert-warning mt-3" role="alert">
+						  	<p class="warning">Fourth commit - master branch!</p>
+						</div>
 					</section>
 				</div>
 			</div>
