--- a/index.html
+++ b/index.html
@@ -20,11 +20,14 @@
 						<div class="alert alert-secondary mt-3" role="alert">
 						  	<p class="secondary">Second commit - master branch!</p>
 						</div>
-            <div class="alert alert-info mt-3" role="alert">
+            			<div class="alert alert-info mt-3" role="alert">
 						  	<p class="info">Third commit - master branch!</p>
-            </div>
+            			</div>
 						<div class="alert alert-warning mt-3" role="alert">
 						  	<p class="warning">Fourth commit - master branch!</p>
+						</div>
+						<div class="alert alert-success mt-3" role="alert">
+						  	<p class="success">Fifth commit - master branch!</p>
 						</div>
 					</section>
 				</div>
